update to JDK-20 internal